--- a/PageCurlExample/src/main/res/layout/integermodel_layout.xml
+++ b/PageCurlExample/src/main/res/layout/integermodel_layout.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
-    android:background="@drawable/ly"
-    tools:context="com.progforce.android.chabad.fragments.JewishHistoryFragment">
+    android:background="@drawable/ly" >
 
     <RelativeLayout
         android:id="@+id/content"
