--- a/WebViewExample/src/main/res/layout/menu_list_item.xml
+++ b/WebViewExample/src/main/res/layout/menu_list_item.xml
@@ -13,6 +13,8 @@
         style="@style/MenuItem.Text"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:textSize="24sp" />
+        android:layout_marginTop="6dp"
+        android:layout_marginBottom="6dp"
+        android:textSize="32sp" />
 
 </RelativeLayout>
