--- a/MaterialDesignLibrary/src/main/res/values/shadow.xml
+++ b/MaterialDesignLibrary/src/main/res/values/shadow.xml
@@ -7,6 +7,8 @@
         <attr name="sl_shadowColor" format="color"/>
         <attr name="sl_dx" format="dimension"/>
         <attr name="sl_dy" format="dimension"/>
+        <attr name="sl_animEnabled" format="boolean"/>
+        <attr name="sl_duration" format="integer"/>
     </declare-styleable>
 
 </resources>
