--- a/MaterialDesignLibrary/src/main/res/values/styles.xml
+++ b/MaterialDesignLibrary/src/main/res/values/styles.xml
@@ -4,17 +4,82 @@
     <!-- =       Material Design Buttons            = -->
     <!-- ========================================== -->
 
-    <style name="MDButtonStyle">
+    <style name="MDButtonStyle" parent="Base.Widget.AppCompat.Button">
         <item name="android:padding">@dimen/md_button_padding</item>
-        <item name="android:textColor">@drawable/md_button_selector_color</item>
+        <item name="android:minWidth">@null</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
     </style>
 
-    <style name="SingleGradient" parent="MDButtonStyle">
-        <item name="android:background">@drawable/md_button_selector_single_gradient</item>
+    <style name="LinearGradientRed" parent="MDButtonStyle">
+        <item name="android:background">@drawable/md_red_button_selector_linear_gradient</item>
+        <item name="android:textColor">@drawable/md_red_button_selector_color</item>
     </style>
 
-    <style name="MultiGradient" parent="MDButtonStyle">
-        <item name="android:background">@drawable/md_button_selector_multi_gradient</item>
+    <style name="RadiusGradientRed" parent="MDButtonStyle">
+        <item name="android:background">@drawable/md_red_button_selector_radius_gradient</item>
+        <item name="android:textColor">@drawable/md_red_button_selector_color</item>
+    </style>
+
+    <style name="LinearGradientPink" parent="MDButtonStyle">
+        <item name="android:background">@drawable/md_pink_button_selector_linear_gradient</item>
+        <item name="android:textColor">@drawable/md_pink_button_selector_color</item>
+    </style>
+
+    <style name="RadiusGradientPink" parent="MDButtonStyle">
+        <item name="android:background">@drawable/md_pink_button_selector_radius_gradient</item>
+        <item name="android:textColor">@drawable/md_pink_button_selector_color</item>
+    </style>
+
+    <style name="LinearGradientPurple" parent="MDButtonStyle">
+        <item name="android:background">@drawable/md_purple_button_selector_linear_gradient</item>
+        <item name="android:textColor">@drawable/md_purple_button_selector_color</item>
+    </style>
+
+    <style name="RadiusGradientPurple" parent="MDButtonStyle">
+        <item name="android:background">@drawable/md_purple_button_selector_radius_gradient</item>
+        <item name="android:textColor">@drawable/md_purple_button_selector_color</item>
+    </style>
+
+    <style name="LinearGradientDeepPurple" parent="MDButtonStyle">
+        <item name="android:background">@drawable/md_deeppurple_button_selector_linear_gradient</item>
+        <item name="android:textColor">@drawable/md_deeppurple_button_selector_color</item>
+    </style>
+
+    <style name="RadiusGradientDeepPurple" parent="MDButtonStyle">
+        <item name="android:background">@drawable/md_deeppurple_button_selector_radius_gradient</item>
+        <item name="android:textColor">@drawable/md_deeppurple_button_selector_color</item>
+    </style>
+
+    <style name="LinearGradientIndigo" parent="MDButtonStyle">
+        <item name="android:background">@drawable/md_indigo_button_selector_linear_gradient</item>
+        <item name="android:textColor">@drawable/md_indigo_button_selector_color</item>
+    </style>
+
+    <style name="RadiusGradientIndigo" parent="MDButtonStyle">
+        <item name="android:background">@drawable/md_indigo_button_selector_radius_gradient</item>
+        <item name="android:textColor">@drawable/md_indigo_button_selector_color</item>
+    </style>
+
+    <style name="LinearGradientBlue" parent="MDButtonStyle">
+        <item name="android:background">@drawable/md_blue_button_selector_linear_gradient</item>
+        <item name="android:textColor">@drawable/md_blue_button_selector_color</item>
+    </style>
+
+    <style name="RadiusGradientBlue" parent="MDButtonStyle">
+        <item name="android:background">@drawable/md_blue_button_selector_radius_gradient</item>
+        <item name="android:textColor">@drawable/md_blue_button_selector_color</item>
+    </style>
+
+    <style name="LinearGradientLightBlue" parent="MDButtonStyle">
+        <item name="android:background">@drawable/md_lightblue_button_selector_linear_gradient</item>
+        <item name="android:textColor">@drawable/md_lightblue_button_selector_color</item>
+    </style>
+
+    <style name="RadiusGradientLightBlue" parent="MDButtonStyle">
+        <item name="android:background">@drawable/md_lightblue_button_selector_radius_gradient</item>
+        <item name="android:textColor">@drawable/md_lightblue_button_selector_color</item>
     </style>
 
 </resources>
